--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-common-tool",
-  "version": "1.0.9",
-  "description": "",
+  "version": "1.1.0",
+  "description": "a js toolkit, contains common algorithms and data structures, also include TS version",
   "main": "index.js",
   "typings": "types/index.d.ts",
   "scripts": {
@@ -13,7 +13,12 @@
     "type": "git",
     "url": "https://gitee.com/lym_ym_m/tools.git"
   },
-  "keywords": [],
+  "keywords": [
+    "js",
+    "typescript",
+    "js-tool",
+    "algorithm && data structure"
+  ],
   "author": "ym",
   "license": "ISC",
   "devDependencies": {
